--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [tool.poetry]
 name = "mahiru_habits_coursework"
-version = "0.1.0"
+version = "0.1.4"
 description = ""
 authors = ["name <email>"]
 readme = "README.md"
@@ -10,26 +10,27 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
-ipython = "^8.29.0"
-django = "^5.1.3"
+ipython = "^8.31.0"
+django = "^5.1.4"
 pillow = "^11.0.0"
 psycopg2 = "^2.9.10"
 djangorestframework = "^3.15.2"
 django-filter = "^24.3"
 djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.8"
-stripe = "^11.3.0"
+stripe = "^11.4.1"
 django-celery-beat = "^2.7.0"
 celery = { extras = ["redis"], version = "^5.4.0" }
+django-cors-headers = "^4.6.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.2.2"
-pytest-cov = "^5.0.0"
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.group.lint.dependencies]
-flake8 = "^7.0.0"
-mypy = "^1.10.0"
-black = "^24.4.2"
+flake8 = "^7.1.1"
+mypy = "^1.14.0"
+black = "^24.10.0"
 isort = "^5.13.2"
 
 [build-system]
